src/snapshots/rbx_types_ops__floor_ceil_round_abs__udim2_round.snap
---
source: src/floor_ceil_round_abs.rs
expression: "Variant::from(UDim2::new(UDim::new(10.5, 15), UDim::new(10.5, 15))).round()"
---
UDim2:
  - - 11
    - 15
  - - 11
    - 15
