src/snapshots/rbx_types_ops__floor_ceil_round_abs__udim_abs.snap
---
source: src/floor_ceil_round_abs.rs
expression: "Variant::from(UDim::new(10.5, -15)).abs()"
---
UDim:
  - 10.5
  - 15
