src/snapshots/rbx_types_ops__floor_ceil_round_abs__udim_round.snap
---
source: src/floor_ceil_round_abs.rs
expression: "Variant::from(UDim::new(10.5, 15)).round()"
---
UDim:
  - 11
  - 15
