src/snapshots/rbx_types_ops__floor_ceil_round_abs__vector2_ceil.snap
---
source: src/floor_ceil_round_abs.rs
expression: "Variant::from(Vector2::new(5.3, 8.2)).ceil()"
---
Vector2:
  - 6
  - 9
