src/snapshots/rbx_types_ops__floor_ceil_round_abs__vector2_round.snap
---
source: src/floor_ceil_round_abs.rs
expression: "Variant::from(Vector2::new(5.3, 8.2)).round()"
---
Vector2:
  - 5
  - 8
