src/snapshots/rbx_types_ops__floor_ceil_round_abs__vector2int16_abs.snap
---
source: src/floor_ceil_round_abs.rs
expression: "Variant::from(Vector2int16::new(5, -8)).abs()"
---
Vector2int16:
  - 5
  - 8
