src/snapshots/rbx_types_ops__floor_ceil_round_abs__vector2int16_ceil.snap
---
source: src/floor_ceil_round_abs.rs
expression: "Variant::from(Vector2int16::new(5, 8)).ceil()"
---
Vector2int16:
  - 5
  - 8
